--- a/index.html
+++ b/index.html
@@ -9,39 +9,26 @@
 </head>
 <body class="page">
 
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-overlay"></div>
-    <img src="https://i.imghippo.com/files/IHhY6050Qlc.jpeg" alt="Hero WalzShop" />
-    <div class="hero-text">
-      <h1>WalzShop</h1>
-      <p>Top Up Game Instan & Aman</p>
+  <!-- HEADER -->
+  <header class="main-header">
+    <h1 class="logo">WalzShop</h1>
+    <p class="tagline">Top Up Game Instan, Murah & Terpercaya ✅</p>
+  </header>
+
+  <!-- SLIDER -->
+  <section class="slider">
+    <div class="slides">
+      <img src="https://i.imghippo.com/files/IHhY6050Qlc.jpeg" alt="Promo 1">
+      <img src="https://i.imghippo.com/files/uy5982ZtQ.jpeg" alt="Promo 2">
+      <img src="https://i.imghippo.com/files/el4034qjU.jpeg" alt="Promo 3">
+      <img src="https://i.imghippo.com/files/EZUu9660Hs.jpg" alt="Promo 4">
     </div>
   </section>
 
-  <!-- BRAND -->
-  <header class="brand container">
-    <div class="brand-badge">
-      <span class="logo-w">Walz</span><span class="logo-s">Shop</span>
-    </div>
-    <p class="tagline">Top Up Cepat ⚡ Murah 💎 Aman 🔒</p>
-
-    <!-- Slogan -->
-    <div class="slogan-card">
-      <div class="s-dot"></div>
-      <div class="s-body">
-        <h3>Mau Top Up?</h3>
-        <p>Masukkan ID, pilih produk, bayar & langsung masuk ⚡</p>
-      </div>
-    </div>
-  </header>
-
   <!-- GAME LIST -->
   <main class="container">
-    <h2 class="section-title">Pilih Game Favoritmu</h2>
-    <p class="tagline center">Klik game di bawah untuk mulai top up</p>
-
-    <section class="games-grid" id="gamesGrid"></section>
+    <h2>Pilih Game Favorit</h2>
+    <div class="games-grid" id="gamesGrid"></div>
   </main>
 
   <!-- FOOTER -->
