--- a/game.html
+++ b/game.html
@@ -3,71 +3,200 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Top Up Game | WalzShop</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;800&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <title>Voucher Spesial | WalzShop</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background: linear-gradient(135deg, #f5fbff 0%, #d9e9fa 100%);
+      color: #e3f6ff;
+      font-family: 'Poppins', Arial, sans-serif;
+      margin: 0;
+      min-height: 100vh;
+    }
+    .container {
+      width: 92%;
+      max-width: 450px;
+      margin: 0 auto;
+      padding-top: 34px;
+    }
+    .section-title {
+      color: #1e2331;
+      font-weight: 700;
+      font-size: 2rem;
+      margin-bottom: 11px;
+      text-align: center;
+      letter-spacing: 0.5px;
+    }
+    .voucher-guide {
+      color: #3e81e3;
+      background: #f5faff;
+      border-radius: 12px;
+      padding: 11px 17px;
+      margin: 0 auto 19px auto;
+      max-width: 480px;
+      font-size: 1.02rem;
+      box-shadow: 0 2px 8px #b2bfcf10;
+      text-align: center;
+    }
+    .voucher-section { text-align: center; margin-bottom: 35px; }
+    .btn-wan {
+      background: #47b5ff;
+      color: #f5fbff;
+      border: none;
+      padding: 13px 32px;
+      border-radius: 24px;
+      font-size: 1.09rem;
+      font-weight: 700;
+      box-shadow: 0 2px 12px #b2bfcf22;
+      margin-bottom: 18px;
+      margin-top: 13px;
+      transition: background 0.18s, color 0.15s;
+      cursor: pointer;
+      letter-spacing: 0.3px;
+    }
+    .btn-wan:hover { background: #1363df; color: #fff; }
+    .voucher-list {
+      margin: 19px auto 0 auto;
+      max-width: 400px;
+      padding: 22px 18px;
+      background: #f9fbfd;
+      border-radius: 18px;
+      box-shadow: 0 2px 16px #b2bfcf22;
+      text-align: left;
+    }
+    .voucher-item {
+      display: flex; align-items: center; justify-content: space-between;
+      background: #f5faff; border-radius: 12px; margin-bottom: 12px; padding: 9px 13px;
+      box-shadow: 0 2px 8px #b2bfcf12;
+    }
+    .voucher-code {
+      font-size: 1.08rem;
+      color: #3e81e3;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      font-family: inherit;
+    }
+    .voucher-desc {
+      font-size:0.98rem; color:#1e2331; opacity:0.72; margin-top:2px;
+    }
+    .btn-voucher {
+      background: linear-gradient(90deg, #47b5ff 60%, #1363df 100%);
+      color: #f5fbff;
+      font-weight: 600;
+      border: none;
+      border-radius: 10px;
+      padding: 7px 20px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.17s, color 0.13s;
+      box-shadow: 0 1px 5px #b2bfcf22;
+    }
+    .btn-voucher:active,
+    .btn-voucher[disabled] {
+      background: #e3eafc;
+      color: #47b5ff;
+      cursor: default;
+    }
+    .voucher-popup {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(30,35,49,0.08);
+      z-index: 9999;
+      justify-content: center;
+      align-items: center;
+      animation: fadeIn 0.3s;
+    }
+    .popup-content {
+      background: #f5fbff;
+      color: #47b5ff;
+      padding: 28px 34px;
+      border-radius: 22px;
+      font-size: 1.15rem;
+      font-family: inherit;
+      font-weight: 700;
+      box-shadow: 0 8px 32px #b2bfcf22;
+      text-align: center;
+      animation: popBounce 0.32s;
+      min-width: 210px;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes popBounce {
+      0% { transform: scale(0.7); }
+      70% { transform: scale(1.08);}
+      100% { transform: scale(1);}
+    }
+    /* Responsive */
+    @media (max-width: 540px) {
+      .container { padding-top: 20px; }
+      .section-title { font-size: 1.32rem; }
+      .voucher-list { padding: 13px 6px; }
+      .popup-content { padding: 19px 13px; min-width: 140px;}
+    }
+  </style>
 </head>
 <body>
-  <header class="brand container">
-    <a href="index.html" class="btn-back">&larr; Kembali</a>
-    <h1 class="brand-badge">
-      <span class="logo-w">Walz</span><span class="logo-s">Shop</span>
-    </h1>
-    <p class="tagline">Top Up Cepat ⚡ Murah 💎 Aman 🔒</p>
-  </header>
-  <main class="container">
-    <!-- GAME HEADER -->
-    <section class="game-header">
-      <img id="gameBanner" class="game-banner" src="" alt="Game">
-      <div class="game-info">
-        <h1 id="gameTitle"></h1>
-      </div>
+  <div class="container">
+    <section class="voucher-section">
+      <h2 class="section-title">Voucher Spesial</h2>
+      <p class="voucher-guide">Gunakan kode voucher di bawah ini untuk mendapatkan diskon/top up lebih hemat!<br>
+        Klik <b>List Code Voucher</b> untuk melihat voucher yang tersedia. Setelah klik <b>Gunakan</b>, voucher otomatis dianggap aktif pada transaksi berikutnya.
+      </p>
+      <button class="btn-wan" id="showVoucherBtn">List Code Voucher</button>
+      <div id="voucherList" class="voucher-list card" style="display:none;"></div>
     </section>
+  </div>
 
-    <!-- INPUT ID & SERVER -->
-    <div class="card">
-      <div class="input-row">
-        <label for="userId">User ID</label>
-        <input type="text" id="userId" placeholder="Masukkan User ID game" maxlength="30" autocomplete="off" />
-      </div>
-      <div class="input-row" id="serverWrap" style="display:none;">
-        <label for="serverId">Server ID</label>
-        <input type="text" id="serverId" placeholder="Masukkan Server ID" maxlength="10" autocomplete="off" />
-      </div>
+  <div id="voucherPopup" class="voucher-popup">
+    <div class="popup-content">
+      <span id="popupText">Voucher telah digunakan!</span>
     </div>
+  </div>
 
-    <!-- PRODUK -->
-    <section class="card">
-      <h2 class="section-title" style="font-size:1.3rem; margin-bottom:10px;">Pilih Nominal</h2>
-      <div id="productGrid"></div>
-    </section>
+  <script>
+    // Daftar voucher statis (bisa diganti dengan fetch API dsb.)
+    const vouchers = [
+      { code: 'WALZ10K', desc: 'Diskon Rp10.000 semua game' },
+      { code: 'TOPUPHEMAT', desc: 'Potongan 5% untuk MLBB' },
+      { code: 'GRATISONGKIR', desc: 'Bebas biaya admin pertama kali' }
+    ];
 
-    <!-- PEMBAYARAN -->
-    <section class="card">
-      <h2 class="section-title" style="font-size:1.3rem; margin-bottom:10px;">Pilih Pembayaran</h2>
-      <div id="paymentGrid"></div>
-    </section>
+    document.getElementById('showVoucherBtn').onclick = function() {
+      const voucherList = document.getElementById('voucherList');
+      if (voucherList.style.display === 'none' || voucherList.style.display === '') {
+        voucherList.innerHTML = vouchers.map((v, i) => `
+          <div class="voucher-item">
+            <div>
+              <span class="voucher-code">${v.code}</span>
+              <div class="voucher-desc">${v.desc}</div>
+            </div>
+            <button class="btn-voucher" onclick="useVoucher(${i}, this)">Gunakan</button>
+          </div>
+        `).join('');
+        voucherList.style.display = 'block';
+      } else {
+        voucherList.style.display = 'none';
+      }
+    };
 
-    <!-- VOUCHER -->
-    <section class="card">
-      <h2 class="section-title" style="font-size:1.1rem; margin-bottom:8px;">Voucher Diskon</h2>
-      <div style="display: flex; gap: 7px; align-items:center;">
-        <input type="text" id="voucherCode" maxlength="12" placeholder="Kode voucher" />
-        <button type="button" id="useVoucherBtn" style="width:auto;min-width:90px;">Pakai</button>
-      </div>
-      <div id="voucherList"></div>
-    </section>
+    window.useVoucher = function(idx, btn) {
+      btn.disabled = true;
+      btn.innerText = 'Digunakan';
+      showVoucherPopup("Voucher telah digunakan!");
+      // Logic voucher aktif bisa ditambah di sini
+    };
 
-    <!-- SUMMARY -->
-    <section class="card">
-      <h2 class="section-title" style="font-size:1.1rem; margin-bottom:8px;">Ringkasan</h2>
-      <div id="summary"></div>
-      <button id="checkoutBtn" class="btn">Checkout & Konfirmasi</button>
-    </section>
-  </main>
-  <footer class="container">
-    <p>© 2025 <strong>WalzShop</strong> — Instan & Terpercaya ✅</p>
-  </footer>
-  <script src="script.js"></script>
+    function showVoucherPopup(msg) {
+      const popup = document.getElementById('voucherPopup');
+      const text = document.getElementById('popupText');
+      text.innerText = msg;
+      popup.style.display = 'flex';
+      setTimeout(() => { popup.style.display = 'none'; }, 1600);
+    }
+  </script>
 </body>
 </html>
