--- a/game.html
+++ b/game.html
@@ -8,24 +8,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- NAVBAR / LOGO -->
   <nav class="navbar">
     <div class="container navbar-inner">
-      <a href="index.html" class="brand-badge">
-        <span class="logo-w">Walz</span><span class="logo-s">Shop</span>
-      </a>
+      <a href="index.html" class="brand-badge"><span class="logo-w">Walz</span><span class="logo-s">Shop</span></a>
       <a href="index.html" class="btn-back-coda" title="Kembali">&larr;</a>
     </div>
   </nav>
 
   <main class="container game-main-coda">
-    <!-- HEADER GAME -->
     <section class="game-header-coda">
       <img id="gameBanner" class="game-banner-coda" src="" alt="Game">
       <h1 id="gameTitle" class="game-title-coda"></h1>
     </section>
 
-    <!-- STEP 1: USER ID -->
     <section class="card-coda">
       <div class="step-guide-coda">1. Masukkan User ID Anda</div>
       <div class="input-row-coda">
@@ -36,19 +31,16 @@
       </div>
     </section>
 
-    <!-- STEP 2: PILIH PRODUK -->
     <section class="card-coda">
       <div class="step-guide-coda">2. Pilih Nominal</div>
       <div id="productGrid" class="product-grid-coda"></div>
     </section>
 
-    <!-- STEP 3: METODE PEMBAYARAN -->
     <section class="card-coda">
       <div class="step-guide-coda">3. Pilih Pembayaran</div>
       <div id="paymentGrid" class="payment-grid-coda"></div>
     </section>
 
-    <!-- STEP 4: VOUCHER -->
     <section class="card-coda">
       <div class="step-guide-coda">4. Voucher Diskon</div>
       <div class="voucher-row-coda">
@@ -59,7 +51,6 @@
       <div id="voucherList" class="voucher-list-coda"></div>
     </section>
 
-    <!-- STEP 5: RINGKASAN & CHECKOUT -->
     <section class="card-coda">
       <div class="step-guide-coda">5. Ringkasan & Bayar</div>
       <div id="summary" class="summary-coda"></div>
