--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- NAVBAR / LOGO -->
   <nav class="navbar">
     <div class="container navbar-inner">
-      <a href="#" class="brand-badge">
-        <span class="logo-w">Walz</span><span class="logo-s">Shop</span>
-      </a>
+      <a href="#" class="brand-badge"><span class="logo-w">Walz</span><span class="logo-s">Shop</span></a>
       <span class="nav-note">Top Up Instan & Aman</span>
     </div>
   </nav>
 
-  <!-- HERO SIMPLE -->
   <section class="hero-coda">
     <div class="hero-content">
       <img src="https://cdn.codashop.com/global/images/codashop-logo-new.svg" alt="Codashop" class="hero-logo">
@@ -27,7 +23,6 @@
     </div>
   </section>
 
-  <!-- GAME LIST -->
   <main class="container main-coda">
     <h2 class="main-title">Pilih Game</h2>
     <div id="gamesGrid" class="games-list-coda"></div>
@@ -38,24 +33,6 @@
       <p>© 2025 <b>WalzShop</b> — Bukan situs resmi publisher game.</p>
     </div>
   </footer>
-  <script>
-    // Contoh data game
-    const GAMES = [
-      {id:'mlbb', name:'Mobile Legends', thumb:'https://cdn.upoint.id/game-cover/mlbb.jpg'},
-      {id:'ff', name:'Free Fire', thumb:'https://cdn.upoint.id/game-cover/ff.jpg'},
-      {id:'pubgm', name:'PUBG Mobile', thumb:'https://cdn.upoint.id/game-cover/pubgm.jpg'},
-      {id:'gi', name:'Genshin Impact', thumb:'https://cdn.codashop.com/global/images/game-icons/GenshinImpact_square.jpg'},
-      {id:'valo', name:'Valorant', thumb:'https://cdn.codashop.com/global/images/game-icons/valo-square.jpg'},
-    ];
-    if(document.getElementById("gamesGrid")) {
-      document.getElementById("gamesGrid").innerHTML = GAMES.map(game => `
-        <a class="game-card-coda" href="game.html?game=${game.id}">
-          <img class="game-thumb-coda" src="${game.thumb}" alt="${game.name}">
-          <div class="game-name-coda">${game.name}</div>
-          <button class="btn-coda">Top Up</button>
-        </a>
-      `).join('');
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
